<resources>
    <string name="my_space">내 공간</string>

    <string name="addSpaceDialogTitle">공간 추가</string>
    <string name="space_name">공간 이름</string>
    <string name="create">추가</string>
    <string name="cancel">취소</string>
    <string name="failedToAddSpace">공간 추가 실패</string>
    <string name="location">위치</string>
    <string name="tag">태그</string>
    <string name="memo">메모</string>
    <string name="purchaseDate">구매일</string>
    <string name="expirationDate">소비기한</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="attach_photo">사진 첨부</string>
    <string name="choose_how_to_attach_photo">사진첨부할 방식을 선택하세요</string>
    <string name="failed_get_photo">사진을 가져오지 못했습니다.</string>
    <string name="category">카테고리</string>
    <string name="life">생활</string>
    <string name="food">식품</string>
    <string name="fashion">패션</string>
    <string name="item_position">물건 위치</string>
    <string name="define_item_position_pin_guide">물건의 위치를 핀으로 찍어보세요.</string>
    <string name="initialize_pin">핀 초기화</string>
    <string name="changeLockerImage">사진 변경</string>
    <string name="confirm">확인</string>
    <string name="changeImageMessage">정말 보관함 사진을 변경하시겠어요? (이전에 찍어둔 핀이 있다면 그대로 남아있을 예정이에요.)</string>
    <string name="deleteLocker">보관함 삭제</string>
    <string name="deleteLockerMessage">%s 보관함을 삭제하시겠어요?\n등록하신 물건이 모두 삭제돼요.</string>
    <string name="deleteSpace">공간 삭제</string>
    <string name="deleteSpaceMessage">%s 공간을 삭제하시겠어요?\n등록하신 보관함과 물건이 모두 삭제돼요.</string>
    <style name="delete">삭제</style>
    <string name="not_exist_locker_image">보관함 사진이 없어요</string>
    <string name="add_locker_image_guidance">사진을 등록하고 핀을 찍어보세요!</string>
    <string name="go_to_add_locker_image">보관함 사진 등록하러 가기</string>
    <string name="please_input_tag_name">태그를 등록해보세요.</string>
    <string name="added_tag_list">등록된 태그 목록 (%d개)</string>
    <string name="item_filter">필터</string>
    <string name="item_filter_order">정렬</string>
    <string name="order_recent">최근등록순</string>
    <string name="order_old">과거등록순</string>
    <string name="order_asc">오름차순</string>
    <string name="order_desc">내림차순</string>
    <string name="item_filter_category">카테고리</string>
    <string name="item_filter_reset">초기화</string>
    <string name="item_filter_apply">적용하기</string>
    <string name="deleteItem">물건 삭제</string>
    <string name="deleteItemMessage">물건을 정말 삭제하시겠어요?</string>
</resources>
