<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/titleTextView"
                style="@style/ItemFinderTypography.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addSpaceDialogTitle"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/spaceNameEditText"
                style="@style/ItemFinderTypography.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTextView"
                android:layout_marginVertical="12dp"
                android:backgroundTint="@color/gray_02"
                android:hint="@string/space_name"
                android:textSize="16sp" />

            <Button
                android:id="@+id/addNewSpaceButton"
                style="@style/ItemFinderTypography.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spaceNameEditText"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@android:color/transparent"
                android:outlineProvider="none"
                android:text="@string/create"
                android:textColor="@color/orange"
                android:textSize="14sp" />

            <Button
                android:id="@+id/cancelButton"
                style="@style/ItemFinderTypography.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spaceNameEditText"
                android:layout_toStartOf="@id/addNewSpaceButton"
                android:backgroundTint="@android:color/transparent"
                android:outlineProvider="none"
                android:text="@string/cancel"
                android:textColor="@color/orange"
                android:textSize="14sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
