<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filterContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapsing_toolbar_container_height"
            android:background="@color/white">

            <View
                android:id="@+id/filterBackground"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/toolbar_container_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1" />

            <ImageView
                android:id="@+id/filterImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_filter"
                app:layout_constraintTop_toTopOf="@id/filterBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ChipButton.Order"
                android:id="@+id/orderButton"
                android:layout_marginStart="16dp"
                android:drawableEnd="@drawable/ic_down"
                android:text="최근등록순"
                app:layout_constraintTop_toTopOf="@id/filterBackground"
                app:layout_constraintStart_toEndOf="@id/filterImageView"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ChipButton.Condition"
                android:id="@+id/conditionButton"
                android:layout_marginStart="8dp"
                android:drawableEnd="@drawable/ic_down"
                android:text="카테고리2"
                app:layout_constraintTop_toTopOf="@id/filterBackground"
                app:layout_constraintStart_toEndOf="@id/orderButton"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ChipButton.Condition"
                android:id="@+id/tagButton"
                android:layout_marginStart="8dp"
                android:drawableEnd="@drawable/ic_down"
                android:text="태그2"
                app:layout_constraintTop_toTopOf="@id/filterBackground"
                app:layout_constraintStart_toEndOf="@id/conditionButton"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            style="@style/DefaultToolbar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            app:layout_collapseMode="pin">

            <com.yapp.itemfinder.feature.common.views.DefaultTopNavigationView
                android:id="@+id/defaultTopNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemsMarkerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/collapsing_toolbar_container_height">

            <View
                android:id="@+id/emptyMarkerMapBackgroundView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/brown_02"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                style="@style/ItemFinderTypography.Subhead"
                android:id="@+id/emptyMarkerMapTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_exist_locker_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/emptyMarkerMapBackgroundView"
                app:layout_constraintEnd_toEndOf="@id/emptyMarkerMapBackgroundView"
                app:layout_constraintBottom_toTopOf="@id/emptyMarkerMapDescriptionTextView"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="0.5"/>

            <TextView
                style="@style/ItemFinderTypography.Body3"
                android:id="@+id/emptyMarkerMapDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:text="@string/add_locker_image_guidance"
                android:textColor="@color/gray_03"
                app:layout_constraintTop_toBottomOf="@id/emptyMarkerMapTitleTextView"
                app:layout_constraintBottom_toTopOf="@id/emptyMarkerMapImageView"
                app:layout_constraintStart_toStartOf="@id/emptyMarkerMapBackgroundView"
                app:layout_constraintEnd_toEndOf="@id/emptyMarkerMapBackgroundView" />

            <ImageView
                android:id="@+id/emptyMarkerMapImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:src="@drawable/ic_empty_locker"
                app:layout_constraintTop_toBottomOf="@id/emptyMarkerMapDescriptionTextView"
                app:layout_constraintBottom_toTopOf="@id/emptySpaceAddButton"
                app:layout_constraintStart_toStartOf="@id/emptyMarkerMapDescriptionTextView"
                app:layout_constraintEnd_toEndOf="@id/emptyMarkerMapDescriptionTextView" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ItemFinderTypography.Body1"
                android:id="@+id/emptySpaceAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:background="@drawable/bg_button_orange_radius_12"
                android:foreground="@drawable/ripple_black_radius_12"
                android:paddingHorizontal="38dp"
                android:paddingVertical="16dp"
                android:text="@string/go_to_add_locker_image"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/emptyMarkerMapImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/emptyMarkerMapGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="emptyMarkerMapBackgroundView,emptyMarkerMapTitleTextView,emptyMarkerMapDescriptionTextView,emptyMarkerMapImageView,emptySpaceAddButton"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.yapp.itemfinder.feature.common.views.item.ItemsMarkerMapView
                android:id="@+id/itemsMarkerMapView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            layout="@layout/fragment_locker_detail_bottom_sheet"
            android:id="@+id/bottomSheet"
            android:layout_gravity="bottom"
            tools:layout_height="320dp"
            tools:layout_width="match_parent" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
